New Checkout and ls -a command test
New checkout and  ls -a command

--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -6,6 +6,16 @@ jobs:
   run-shell-command:
     runs-on: ubuntu-latest
     steps:
+      - name: List Files
+        run: |
+          pwd
+          ls -a
+      - name: Checkout
+        uses: actions/checkout@v1
+      - name: List Files After Checkout
+        run: |
+          pwd
+          ls -a
       - name: echo a string
         run: echo "Hello World"
       - name: multiline
